# remote-slurm

./: .gitignore  LICENSE  README.md  pyproject.toml
remote_slurm/: __init__.py  execute.py  slurmify.py  ssh.py
tests/: test_execute.py  test_slurmify.py  test_ssh.py
