[project]
name = "remote-slurm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10,<4.0"
dependencies = [
    "paramiko~=4.0.0",
    "returns~=0.26.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "types-paramiko>=4.0.0.20250822",
    "types-requests>=2.32.4.20260107",
]

[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
ignore_missing_imports = true
strict = true
local_partial_types = true
warn_unreachable = true

enable_error_code = [
  "truthy-bool",
  "truthy-iterable",
  "redundant-expr",
  "unused-awaitable",
  # "ignore-without-code",
  "possibly-undefined",
  "redundant-self",
  # "explicit-override",
  # "mutable-override",
  "unimported-reveal",
  "deprecated",
  "exhaustive-match",
]

disable_error_code = [
  "no-untyped-def",
]

[[tool.mypy.overrides]]
module = "wemake_python_styleguide.compat.nodes"
# We allow explicit `Any` only in this file, because of the compatibility:
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = "wemake_python_styleguide.compat.packaging"
# We allow unused `ignore` comments, because we cannot sync it between versions:
warn_unused_ignores = false